--- a/signup/signup.css
+++ b/signup/signup.css
@@ -3,11 +3,11 @@ body{
 }
 @font-face {
     font-family: shabnam;
-    src: url("Fonts\\shabnam-font-v5.0.1\\Shabnam.ttf");
+    src: url("../Fonts/shabnam-font-v5.0.1/Shabnam.ttf");
 }
 @font-face {
     font-family: shabnam-bold;
-    src: url("Fonts\\shabnam-font-v5.0.1\\Shabnam-Bold.ttf");
+    src: url("../Fonts/shabnam-font-v5.0.1/Shabnam-Bold.ttf");
 }
 .navbar{
     width: 100%;
