--- a/signup/signup.css
+++ b/signup/signup.css
@@ -1,5 +1,11 @@
 body{
     background-color: #283060;
+    margin: 0;
+    padding: 0;
+}
+html {
+    margin: 0;
+    padding: 0;
 }
 @font-face {
     font-family: shabnam;
